--- a/src/alefba-src/src/stylesheets/catalog.scss
+++ b/src/alefba-src/src/stylesheets/catalog.scss
@@ -78,13 +78,18 @@
         flex-direction: column-reverse;
         justify-content: space-around;
         gap: 2rem;
-        padding-block: 6vw;
-        padding-inline: 0.4vw;
-        width: 76vw;
+        padding-block: 2.25rem;
+        padding-inline: 2.5rem;
+        width: max-content;
+        max-width: 61%;
+
+        & > div:nth-of-type(2) {
+            width: 100%;
+        }
     }
 
     #catalog-cover {
-        width: 60vw;
+        width: 100%;
     }
 
     #catalog-description {
@@ -128,6 +133,6 @@
 
 @media screen and (max-width: 500px) {
     #catalog {
-        margin-top: #{'max(380px, 129vw)'};
+        margin-top: 10rem;
     }
 }
